Fixing alignment for o-auth buttons

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 
 .logo {
   text-align: center;
-  img{
+  img {
     width: 195px;
     height: 86px;
     opacity: 1;
@@ -28,7 +28,11 @@
 
 .card {
   width: 60vw;
-  background: linear-gradient(178.22deg, rgba(255, 255, 255, 0.8) -5.77%, rgba(255, 255, 255, 0.4) 108.08%);
+  background: linear-gradient(
+    178.22deg,
+    rgba(255, 255, 255, 0.8) -5.77%,
+    rgba(255, 255, 255, 0.4) 108.08%
+  );
   border-radius: 25px;
   border: 1px solid #d8d8d8;
   padding: 2em;
@@ -45,11 +49,11 @@
 .heading .title {
   font-size: 34px;
   font-weight: 500;
-  color: #161C2B;
+  color: #161c2b;
 }
 
 .heading .title span {
-  color: #5B576F;
+  color: #5b576f;
   font-weight: 400;
 }
 
@@ -62,10 +66,12 @@
 /* Buttons section */
 .auth-buttons {
   display: flex;
-  justify-content: space-between;
-  /* gap: 20px; */
+  justify-content: center; /* Center all rows */
   flex-wrap: wrap;
+  gap: 20px;
+  align-items: center;
 }
+
 
 /* Button style */
 .button-46 {
@@ -73,18 +79,20 @@
   align-items: center;
   justify-content: center;
   gap: 5px;
-  background: #ffff;
+  background: #fff;
   border: 1px solid #d8d8d8;
   border-radius: 10px;
   cursor: pointer;
   height: 40px;
-  min-width: 150px;
-  max-width: 100%;
+  flex: 1 1 220px; /* Controls layout and row breaking */
+  max-width: 250px; /* Prevents stretching too wide */
   transition: all 0.2s;
   -webkit-user-select: none;
   touch-action: manipulation;
   padding: 1.8em 1em;
 }
+
+
 
 .button-46:active,
 .button-46:hover {
@@ -110,7 +118,7 @@
   left: 0;
   width: 100%;
   height: 1px;
-  background: #E7E8E9;
+  background: #e7e8e9;
   z-index: 1;
 }
 
@@ -190,7 +198,7 @@
   text-align: center;
   margin-top: 1em;
   font-size: 13px;
-  color: #5B576F;
+  color: #5b576f;
   font-weight: 400;
 }
 
@@ -201,6 +209,6 @@
 }
 
 .create-account a:hover {
-  color: #041C4A;
+  color: #041c4a;
   text-decoration: none;
 }
